<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="@dimen/card_margin"
    app:cardElevation="@dimen/card_elevation"
    app:cardCornerRadius="@dimen/list_card_cr"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/title_tv"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/title"
            android:textSize="@dimen/list_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_value_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="10dp"
            android:textSize="@dimen/list_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/title_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.17"
            app:layout_constraintStart_toEndOf="@+id/title_tv"
            app:layout_constraintTop_toTopOf="@+id/title_tv"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/sample_title_name" />

        <TextView
            android:id="@+id/artist_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/artist"
            android:textSize="@dimen/list_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_tv"
            app:layout_constraintVertical_bias="0.031" />

        <TextView
            android:id="@+id/artist_value_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:lines="1"
            android:ellipsize="end"
            android:layout_marginEnd="10dp"
            android:textSize="@dimen/list_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/artist_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/artist_tv"
            app:layout_constraintTop_toTopOf="@+id/artist_tv"
            tools:text="@string/artist_sample" />

        <TextView
            android:id="@+id/year_tv"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/year"
            android:textSize="@dimen/list_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/artist_tv" />

        <TextView
            android:id="@+id/year_value_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:lines="1"
            android:ellipsize="end"
            android:layout_marginEnd="10dp"
            android:textSize="@dimen/list_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/year_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/year_tv"
            app:layout_constraintTop_toTopOf="@+id/year_tv"
            tools:text="@string/year_sample" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>